--- a/src/Header/styles.scss
+++ b/src/Header/styles.scss
@@ -1,3 +1,9 @@
 .header {
   background-color: blue;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: row;
+  height: 10px;
+  padding: 20px;
+  align-items: center;
 }
